--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 					if (request.status >= 200 && request.status < 400) {
 						// Success!
 						var data = JSON.parse(request.responseText);
-						console.log(data);
+						//console.log(data);
 						var table = document.getElementById('devices');
 						for(var i = 0; i <= data.length - 1; i++) {
 							if(data[i].active) {
